--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,8 @@
 		<link rel="stylesheet" href="../css/index-mobile.css" />
 		<link rel="stylesheet" href="../css/shopkeeper.css" />
 		<link rel="stylesheet" href="../css/purpose.css" />
+		<link rel="stylesheet" href="../css/contact.css" />
+		<link rel="stylesheet" href="../css/footer.css" />
 		
 	</head>
 	<body>
@@ -29,9 +31,9 @@
 				<span></span>
 			</div>
 			<ul class="menu">
-				<li><a>主页</a></li>
-				<li><a>各分舵</a></li>
-				<li><a>活动</a></li>
+				<li><a href="index.html">主页</a></li>
+				<li><a href="shops.html">各分舵</a></li>
+				<li><a href="projects.html">活动</a></li>
 				<li><a>等你来撩</a></li>
 			</ul >
 		</header>
@@ -160,5 +162,52 @@
 		</div>
 	<!-- our shopkeeper end -->
 	
+	<!-- contact start -->
+		<div class="contact padding">
+			<div class="common-title">
+				<h2>等你来撩</h2>
+				<p>
+					大家伙可以加入我们的微信群，关注我们的公众号。<br />
+					在这里你也可以找到各分舵主的联系方式，就等你来撩
+				</p>
+				<div class="code">
+					<span>
+						<img  src="../img/gong.png"/><br />
+						公众号
+					</span>
+					<span class="code">
+						<img src="../img/wei.png" /><br />
+						微信群
+					</span>
+				</div>
+				
+			</div>
+			<div class="contact-details">
+				<h3>长沙分舵舵主</h3>
+				<p>
+					<i class="fa fa-phone"></i>
+					<span>电话号码：1314227****</span>
+				</p>
+				<p>
+					<i class="fa fa-wechat "></i>
+					<span>微信：1314227****</span>
+				</p>
+				<p>
+					<i class="fa fa-qq "></i>
+					<span>QQ：3950****</span>
+				</p>
+				<p>
+					<i class="fa fa-weibo"></i>
+					<span>微博：3950**@qq.com</span>
+				</p>
+			</div>
+		</div>
+	<!-- contact end -->
+	
+	<!-- footer start -->
+		<footer>
+			<p>Copyright © 2017 七小院 版权所有</p>
+		</footer>
+	<!-- footer end -->
 	</body>
 </html>
