--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		
 		<title>七小院欢迎你</title>
 		
-		<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+		<!--<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">-->
 		
-		<link rel="stylesheet" href="./yard.min.css" />
+		<link rel="stylesheet" href="yard.min.css" />
 		
 	</head>
 	<body>
@@ -16,7 +16,7 @@
 		<!-- header start -->
 			<header>
 				<div class="logo">
-					<a><img src="./assets/src/img/logo.png" /></a>
+					<a><img src="./src/assets/img/logo.png" /></a>
 				</div>
 				<div @click="changeBtn" class="btn"><!-- btn的点击事件   -->
 					<span></span>
